src/objects/Farmer_Order_Allocation__c.object
<CustomObject>
    <fields>
        <fullName>Alsur_Farmer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Alsur Farmer</label>
        <referenceTo>Alsur_Farmer__c</referenceTo>
        <relationshipLabel>Farmer Order Allocations</relationshipLabel>
        <relationshipName>Farmer_Order_Allocations</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Unit_of_Presentation__c</fullName>
        <formula>CPA_Order_Allocation__r.Unit_of_Presentation__c</formula>
        <label>Assigned Unit of Presentation</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CPA_Order_Allocation__c</fullName>
        <label>CPA Order Allocation</label>
        <referenceTo>CPA_Order_Allocation__c</referenceTo>
        <relationshipLabel>Farmer Order Allocations</relationshipLabel>
        <relationshipName>Farmer_Order_Allocations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Client__c</fullName>
        <formula>CPA_Order_Allocation__r.Client__c</formula>
        <label>Client</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Delivery_Date__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Delivery Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Farmer_Name__c</fullName>
        <formula>Alsur_Farmer__r.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Farmer Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_of_Kilos__c</fullName>
        <label>Number of Kilos</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_Units_of_Presentation__c</fullName>
        <label>Number of Units of Presentation</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Number_of_baskets__c</fullName>
        <label>Number of Baskets</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Order_Code__c</fullName>
        <formula>CPA_Order_Allocation__r.Order_Code__c</formula>
        <label>Order Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Presentacion__c</fullName>
        <formula>CPA_Order_Allocation__r.Presentacion__c</formula>
        <label>Presentación</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Provider__c</fullName>
        <description>Shows whether an order was assigned to a provider or not.</description>
        <label>Provider</label>
        <picklist>
            <picklistValues>
                <fullName>Sí</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Farmer Order Allocation</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Client__c</columns>
        <columns>CPA_Order_Allocation__c</columns>
        <columns>Alsur_Farmer__c</columns>
        <columns>Farmer_Name__c</columns>
        <columns>Assigned_Unit_of_Presentation__c</columns>
        <columns>Delivery_Date__c</columns>
        <columns>Number_of_baskets__c</columns>
        <columns>Number_of_Kilos__c</columns>
        <columns>Number_of_Units_of_Presentation__c</columns>
        <columns>CREATED_DATE</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>FOAN-{00000000}</displayFormat>
        <label>Farmer Order Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Farmer Order Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>